--- a/style.css
+++ b/style.css
@@ -1,8 +1,4 @@
-#loadingContainer{
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+body {
+    margin: 0;
+    background-color: #f6f7f8;
 }
-
-
