--- a/css/login.css
+++ b/css/login.css
@@ -31,31 +31,28 @@
     }
 }
 
-#login-field {
+#login-form {
     background-color: white;
     height: 505px;
     width: 652px;
     border-radius: 30px;
-    opacity: 0;
-    animation: appearField 0.5s ease-in-out 1s forwards;
     box-shadow: 0px 0px 14px 3px #0000000A;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 32px;
+}
+
+.animation {
+    opacity: 0;
+    animation: appearField 0.5s ease-in-out 1s forwards;
 }
 
 @keyframes appearField {
     to {
         opacity: 1;
     }
-}
-
-.login-form {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    gap: 32px;
 }
 
 .login-heading {
@@ -105,6 +102,11 @@
 
 .email {
     background: url(../assets/image/mail.png) no-repeat;
+    background-position: right 21px center;
+}
+
+.person {
+    background: url(../assets/image/person.png) no-repeat;
     background-position: right 21px center;
 }
 
@@ -165,6 +167,7 @@
     letter-spacing: 0em;
     text-align: left;
     cursor: pointer;
+    text-align: center;
 }
 
 .login-button:hover {
@@ -209,7 +212,7 @@
     color: white;
 }
 
-.sign-up-btn-container {
+#sign-up-btn-container {
     position: absolute;
     top: 40px;
     right: 50px;
@@ -239,4 +242,116 @@
 a {
     text-decoration: none;
     color: rgba(0, 0, 0, 0.4);
+}
+
+a:hover {
+    color: #29ABE2;
+}
+
+.sign-up-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 598px;
+    height: 630px;
+    border-radius: 30px;
+    background-color: white;
+    position: relative;
+    gap: 32px;
+}
+
+.sign-up-btn-form {
+    width: 100px;
+    height: 30px;
+    padding: 15px 24px 15px 24px;
+    border-radius: 8px;
+    gap: 10px;
+    background-color: #2A3647;
+    color: white;
+    font-family: Inter;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
+.sign-up-btn-form:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 9px -1px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
+}
+
+.sign-up-arrow {
+    position: absolute;
+    top: 72px;
+    left: 30px;
+    cursor: pointer;
+}
+
+.arrow:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    border-radius: 50%;
+}
+
+.input-container {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+.accept-terms-checkbox {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.forgot-password-form {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 35px;
+    padding: 48px 88px;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 30px;
+    background-color: white;
+    width: 680px;
+}
+
+.forgot-password-arrow {
+    position: absolute;
+    top: 66px;
+    left: 30px;
+    cursor: pointer;
+}
+
+.form-text {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0em;
+    text-align: center;
+}
+
+.send-email-btn {
+    width: fit-content;
+    height: fit-content;
+    padding: 15px 24px 15px 24px;
+    border-radius: 8px;
+    background-color: #2A3647;
+    color: white;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 25px;
+    letter-spacing: 0em;
+}
+
+.send-email-btn:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 9px -1px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 }
