--- a/style.css
+++ b/style.css
@@ -1,4 +1,221 @@
 body {
     margin: 0;
+    padding: 0;
     background-color: #f6f7f8;
 }
+
+#loadingContainer{
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
+
+/* ---------- Sidebar ---------- */
+
+.sidebar {
+    width: 232px;
+    height: 100%;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #2A3647;
+    padding: 64px 0;
+    font-family: 'Inter', sans-serif;
+}
+
+.sidebar a {
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.sidebar-top {
+    display: flex;
+    flex-direction: column;
+}
+
+.sidebar-logo {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 60px;
+}
+
+.sidebar-menu {
+    display: flex;
+    flex-direction: column;
+    height: 229px;
+    width: 232px;
+    gap: 8px;
+}
+
+.sidebar-menu a {
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    height: 46px;
+    padding: 0px 30px 1px 50px;
+    color: #CDCDCD;
+    cursor: pointer;
+}
+
+.sidebar-menu img {
+    height: 30px;
+    width: 30px;
+    margin-right: 10px;
+}
+
+.sidebar-bottom {
+    margin-bottom: 120px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 100%;
+}
+
+.sidebar-bottom a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #A8A8A8;
+    height: 35px;
+    cursor: pointer;
+}
+
+.sidebar-bottom a:hover {
+    color: #29aae0;
+}
+
+.menu-item:hover {
+    background-color: #2a3d59;
+    transition: .1s ease-in-out;
+}
+
+.bg-dark {
+    background-color: #091931 !important; 
+}
+
+.bg-dark-legal-notice {
+    background-color: #091931 !important; 
+    color: #A8A8A8 !important;
+}
+
+.white {
+    color: #FFFFFF !important;
+
+}
+
+.dNone {
+    display: none;
+}
+
+
+
+/* provisorisch*/
+#goBack {
+    margin-left: 500px;
+    margin-top: 200px;
+    color: black;
+    width: 50px;
+    height: 50px;
+}
+
+
+/* ---------- Header ---------- */
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    /* max-width: 1440px; */
+    padding-left: 348px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 96px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.header-left {
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Inter', sans-serif;
+}
+
+.header-right {
+    display: flex;
+    align-items: center;
+    gap: 16px;
+    margin-right: 30px;
+
+}
+
+.header-menu {
+    width: 150px;
+    height: 158px;
+    position: absolute;
+    top: 96px;
+    right: 0;
+    margin-right: 24px;
+    border-radius: 20px 0 20px 20px;
+    padding: 10px;
+    background-color: #2A3647;
+}
+
+.header-subMenu {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.header-subMenu a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 130px;
+    height: 46px;
+    border-radius: 8px;
+    text-decoration: none;
+    color: #CDCDCD;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    padding: 4px 12px;
+}
+
+.header-subMenu a:hover {
+    background-color: #2a3d59;
+    transition: .1s ease-in-out;
+}
+
+
+.help:hover {
+    transform: scale(1.1);
+}
+
+
+#myAccount {
+    width: 56px;
+    height: 56px;
+    border: 3px solid #2A3647;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #29ABE2;
+    font-size: 20px;
+    font-family: 'Inter', sans-serif;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+#myAccount:hover {
+    background-color: #E2E6EC;
+}
+
+
+
+
