--- a/css/add_task.css
+++ b/css/add_task.css
@@ -1,11 +1,16 @@
 #addTaskContainer {
     display: flex;
-    justify-content: start;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    margin: 110px 96px;
     font-family: inter;
     font-weight: 400;
     font-size: 20px;
+    position: absolute;
+    width: 1208px;
+    height: 928px;
+    left: 232px;
+    top: 96px
 }
 
 #addTaskContainer h1 {
@@ -29,7 +34,7 @@
     justify-content: flex-start;
     flex-direction: column;
     gap: 20px;
-    
+
 
 
     padding-right: 32px;
