--- a/style.css
+++ b/style.css
@@ -4,6 +4,19 @@ body {
     background-color: #f6f7f8;
 }
 
+h1 {
+    font-size: 61px;
+    font-weight: 700;
+    font-family: 'Inter', sans-serif;
+}
+
+h2 {
+    font-size: 64px;
+    font-weight: 600;
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+}
+
 #loadingContainer{
     position: absolute;
     top:50%;
@@ -39,7 +52,7 @@ body {
 .sidebar-logo {
     display: flex;
     justify-content: center;
-    margin-bottom: 60px;
+    margin-bottom: 100px;
 }
 
 .sidebar-menu {
@@ -216,6 +229,63 @@ header {
     background-color: #E2E6EC;
 }
 
+/* ---------- Header ---------- */
 
+.body {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 96px 0 0 328px;
+}
 
+.headline-h1 {
+    display: flex;
+    align-items: center;
+    gap: 30px;
+    margin: 60px 0 0 0px;
+    background-color: #F6F7F8;
+}
 
+.headline-h1 span {
+    font-family: 'Inter', sans-serif;
+    font-weight: 400;
+    font-size: 27px;
+}
+
+.summary-content {
+    display: flex;
+    flex-direction: row;
+}
+
+.summery-elements {
+    display: flex;
+    flex-direction: column;
+}
+
+.summery-container {
+    display: flex;
+}
+
+.tasks {
+    width: 168px;
+    height: 168px;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
+    color: #2A3647;
+    text-align: center;
+    margin: 10px;
+    background-color: #FFFFFF;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.task-text {
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Inter', sans-serif;
+}
