--- a/css/add_task.css
+++ b/css/add_task.css
@@ -13,9 +13,17 @@
     top: 96px
 }
 
+.add-task {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 64px;
+}
+
 #addTaskContainer h1 {
     font-weight: 700;
     font-size: 61px;
+    margin: 0;
 }
 
 #addTaskContainerer label {
@@ -63,10 +71,37 @@
     width: 440px;
     font-size: 20px;
     margin: 12px 0;
+    border-radius: 10px;
 }
 
 
+.dropdown-field {
+    height: 48px;
+    width: 440px;
+    font-size: 20px;
+    background-color: white;
+    display: flex;
+    align-items: center;
+}
 
+.dropdown-field-text {
+    width: 100%;
+    height: 100%;
+    font-size: 20px;
+    border-radius: 10px;
+}
+
+
+.dropdown-field-icon {
+    width: 48px;
+    height: 48px;
+    font-size: 20px;
+    margin-left: -48px;
+}
+
+#assignedUserList {
+    width: 100%;
+}
 
 #newTaskCategory {
     display: flex;
@@ -79,6 +114,10 @@
     justify-content: space-evenly;
     flex-direction: row;
     gap: 16px;
+}
+
+.hide {
+    display: none;
 }
 
 .priority-button {
@@ -101,6 +140,57 @@
 
 
 
-.priority-button-selected{
-    border: solid 3px green;
+.priority-button-urgent-selected {
+    background-color: orangered;
+
+}
+
+.priority-button-medium-selected {
+    background-color: orange;
+}
+
+.priority-button-low-selected {
+    background-color: #7AE229;
+    ;
+}
+
+.white-symbol {
+    filter: brightness(0) invert(1);
+}
+
+.form-options {
+    float: right;
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
+
+
+.form-options-button {
+    gap: 16px;
+    font-size: 21px;
+    padding: 10px;
+    border-radius: 16px;
+    background-color: #2A3647;
+
+}
+
+.form-options-button-clear {
+    background-color: #F6F7F8;
+}
+
+.form-options-button-clear:hover {
+    border-color: #29ABE2;
+    color: #29ABE2;
+    box-shadow: 0px 4px 9px -1px rgba(0, 0, 0, 0.4);
+}
+
+.form-options-button-create {
+    background-color: #2A3647;
+    color: white;
+}
+
+.form-options-button-create:hover {
+    background-color: #29ABE2;
+    box-shadow: 0px 4px 9px -1px rgba(0, 0, 0, 0.4);
 }
