--- a/css/add_task.css
+++ b/css/add_task.css
@@ -135,30 +135,23 @@
 }
 
 .selected-user-checkbox {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 18px;
-    height: 18px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-}
-
-.selected-user-checkbox::before{
-    content: "";
-    position: absolute;
     display: none;
-    width: 100%;
-    height: 100%;
-    background-color: #2A3647;
-    background-image: url('checkbox-empty.svg'); /* Icon for selected state */
-    background-repeat: no-repeat;
-    background-position: center;
 }
 
-.selected-user-checkbox::checked {
-    display: block; /* Show the selected icon when the checkbox is checked */
-    background-image: url('checkbox-filled.svg'); /* Icon for unselected state */
+.selected-user-checkbox-label {
+    display: inline-block;
+    width: 16px; /* Set the width and height to match your image dimensions */
+    height: 16px;
+    background-image: url('../assets/icons/checkbox-empty.svg');
+    background-size: cover; /* or 'contain', depending on your design */
+    cursor: pointer;
+}
+
+.selected-user-checkbox:checked + .selected-user-checkbox-label {
+    background-image: url('../assets/icons/checkbox-filled.svg');
+    border: 1px solid #000;
+    padding: 3px;
+    background-color: #f00;
 }
 
 #newTaskCategory {
@@ -166,7 +159,7 @@
     flex-direction: row;
 }
 
-.new-task-category-option{
+.new-task-category-option {
     width: 440px;
     font-size: 20px;
 }
