--- a/style.css
+++ b/style.css
@@ -15,6 +15,14 @@ h2 {
     font-weight: 600;
     font-family: 'Inter', sans-serif;
     margin: 0;
+    color: #000000;
+}
+
+h3 {
+    font-size: 20px;
+    font-weight: 700;
+    color: #2A3647;
+    margin-bottom: 13px;
 }
 
 #loadingContainer{
@@ -176,6 +184,7 @@ header {
     border-radius: 20px 0 20px 20px;
     padding: 10px;
     background-color: #2A3647;
+    z-index: 1;
 }
 
 .header-subMenu {
@@ -229,7 +238,7 @@ header {
     background-color: #E2E6EC;
 }
 
-/* ---------- Header ---------- */
+/* ---------- Summary ---------- */
 
 .body {
     position: absolute;
@@ -238,6 +247,7 @@ header {
     top: 0;
     bottom: 0;
     margin: 96px 0 0 328px;
+    font-family: 'Inter', sans-serif;
 }
 
 .headline-h1 {
@@ -249,7 +259,7 @@ header {
 }
 
 .headline-h1 span {
-    font-family: 'Inter', sans-serif;
+    /* font-family: 'Inter', sans-serif; */
     font-weight: 400;
     font-size: 27px;
 }
@@ -257,6 +267,7 @@ header {
 .summary-content {
     display: flex;
     flex-direction: row;
+    width: 560px;
 }
 
 .summery-elements {
@@ -266,9 +277,10 @@ header {
 
 .summery-container {
     display: flex;
+    justify-content: space-between;
 }
 
-.tasks {
+.tasks-top {
     width: 168px;
     height: 168px;
     border-radius: 30px;
@@ -288,4 +300,47 @@ header {
     font-size: 20px;
     font-weight: 400;
     font-family: 'Inter', sans-serif;
+    color: #2A3647;
+}
+
+.task-middle {
+    width: 560px;
+    height: 168px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    gap: 61px;
+    text-decoration: none;
+    color: #2A3647;
+    margin: 10px;
+    background-color: #FFFFFF;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+}
+
+.summary-field {
+    display: flex;
+    justify-content: space-around;
+    gap: 18px;
+    margin-left: 65px;
+    text-align: center;
+}
+
+.font-16 {
+    font-size: 16px;
+    font-weight: 400;
+    color: #2A3647;
+}
+
+.task-bottom {
+    width: 264px;
+    height: 168px;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    gap: 61px;
+    text-decoration: none;
+    color: #2A3647;
+    margin: 10px;
+    background-color: #FFFFFF;
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
