--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ h1 {
     font-size: 61px;
     font-weight: 700;
     font-family: 'Inter', sans-serif;
-    /* margin: 0 0 40px 0; */
     margin: 0;
 }
 
@@ -160,6 +159,7 @@ header {
     right: 0;
     height: 96px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
+    z-index: 99
 }
 
 .header-left {
@@ -173,7 +173,6 @@ header {
     align-items: center;
     gap: 16px;
     margin-right: 30px;
-
 }
 
 .header-menu {
@@ -220,7 +219,6 @@ header {
     transform: scale(1.1);
 }
 
-
 #myAccount {
     width: 56px;
     height: 56px;
@@ -250,6 +248,7 @@ header {
     bottom: 0;
     margin: 96px 0 0 328px;
     font-family: 'Inter', sans-serif;
+    overflow-y: scroll;
 }
 
 .headline-h1 {
@@ -262,7 +261,6 @@ header {
 }
 
 .headline-h1 span {
-    /* font-family: 'Inter', sans-serif; */
     font-weight: 400;
     font-size: 27px;
 }
@@ -297,18 +295,6 @@ header {
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* .summery-container a:hover {
-    background-color: #2D3849;
-    color: white !important;
-} */
-
-/* Füge diesen CSS-Code zu deinem Stylesheet hinzu */
-/* .tasks-top:hover .task-text {
-    background-color: #2D3849;
-    color: white;
-} */
-
-
 .task-text {
     font-size: 20px;
     font-weight: 400;
@@ -336,9 +322,8 @@ header {
     gap: 18px;
     margin-left: 65px;
     text-align: center;
-
+    position: relative;
 }
-
 
 .font-16 {
     font-size: 16px;
@@ -359,7 +344,6 @@ header {
     background-color: #FFFFFF;
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
 }
-
 
 .greet-section {
     display: flex;
@@ -383,8 +367,6 @@ header {
     color:#29ABE2;
 }
 
-
-/* Füge diesen CSS-Code zu deinem Stylesheet hinzu */
 .tasks-top:hover {
     background-color: #2A3647;
 }
@@ -446,4 +428,16 @@ header {
 
 .box-right:hover {
     transform: scaleX(1.05) scaleY(1.05) translateX(-5%);
+}
+
+.task-bottom-img1 {
+    position: absolute;
+    left: 24px;
+    top: 30px;
+}
+
+.task-bottom-img2 {
+    position: absolute;
+    left: 15px;
+    top: 32px;
 }
