--- a/style.css
+++ b/style.css
@@ -27,11 +27,30 @@ h3 {
     margin-bottom: 13px;
 }
 
-#loadingContainer{
+
+.circle {
+    width: 42px;
+    height: 42px;
+    border-radius: 50%;
+   
+    display:flex;
+    justify-content: center;
+    align-items: center;
+
+    /* Makes the element a circle */
+}
+
+.circle-text{
+    color: white;
+    font-size: 12px;
+}
+
+
+#loadingContainer {
     position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* ---------- Sidebar ---------- */
@@ -117,11 +136,11 @@ h3 {
 }
 
 .bg-dark {
-    background-color: #091931 !important; 
+    background-color: #091931 !important;
 }
 
 .bg-dark-legal-notice {
-    background-color: #091931 !important; 
+    background-color: #091931 !important;
     color: #A8A8A8 !important;
 }
 
