--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ h3 {
     background-color: #2A3647;
     padding: 64px 0;
     font-family: 'Inter', sans-serif;
+    z-index: 3;
 }
 
 .sidebar a {
@@ -178,7 +179,7 @@ header {
     right: 0;
     height: 96px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
-    z-index: 99
+    z-index: 2
 }
 
 .header-left {
