--- a/css/login_responsiv.css
+++ b/css/login_responsiv.css
@@ -59,7 +59,8 @@
         width: 396px;
         height: 595px;
         margin: 150px 0 150px 0px;
-        border-radius: 30px
+        border-radius: 30px;
+        padding: 12px 0 12px 0;
     }
 
     .login-heading {
@@ -104,7 +105,7 @@
     }
 
     .signed-up-message {
-        top: 54px;
+        top: 45px;
         width: 116px;
         text-align: center;
     }
