--- a/css/add_task.css
+++ b/css/add_task.css
@@ -37,12 +37,11 @@
 }
 
 .task-input-cell {
-    width: 50%;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
     gap: 20px;
-
+    width: 440px;
 
 
     padding-right: 32px;
@@ -90,15 +89,12 @@
     border-radius: 10px;
 }
 
-
 .dropdown-field-icon {
     width: 48px;
     height: 48px;
     font-size: 20px;
     margin-left: -48px;
 }
-
-
 
 #assignUserFrom {
     border-radius: 10px;
@@ -109,49 +105,53 @@
     justify-content: center;
 }
 
+.user-information {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+}
+
+#assignedUserContent{
+    max-width: 440px;
+    display: flex;
+    justify-content: center;
+    
+}
+
 #assignedUserList {
     width: 100%;
     border-collapse: collapse;
     border-spacing: 0;
+    display: flex;
+    flex-direction: row;
 }
 
-#assignedUserList tr {
+.assign-user-option {
     border-radius: 10px;
     font-size: 20px;
+    cursor: pointer;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-#assignedUserList tr:hover {
+.assign-user-option:hover {
     background-color: rgb(233, 233, 233);
 }
 
-#assignedUserList .selectedRow {
+.selected-option {
     background-color: #2A3647;
     color: white
 }
 
-#assignedUserList .selectedRow:hover {
+.selected-option:hover {
     background-color: #091931;
     color: white;
 }
 
 .selected-user-checkbox {
-    display: none;
-}
-
-.selected-user-checkbox-label {
-    display: inline-block;
-    width: 16px; /* Set the width and height to match your image dimensions */
-    height: 16px;
-    background-image: url('../assets/icons/checkbox-empty.svg');
-    background-size: cover; /* or 'contain', depending on your design */
-    cursor: pointer;
-}
-
-.selected-user-checkbox:checked + .selected-user-checkbox-label {
-    background-image: url('../assets/icons/checkbox-filled.svg');
-    border: 1px solid #000;
-    padding: 3px;
-    background-color: #f00;
+    margin: 12px;
 }
 
 #newTaskCategory {
@@ -205,7 +205,6 @@
 
 .priority-button-low-selected {
     background-color: #7AE229;
-    ;
 }
 
 .white-symbol {
@@ -213,6 +212,7 @@
 }
 
 .form-options {
+    z-index: -10;
     float: right;
     width: 100%;
     display: flex;
