--- a/css/privacy_policy.css
+++ b/css/privacy_policy.css
@@ -4,9 +4,20 @@ body{
 
 .privacy-policy-container {
     position: absolute;
-    margin: 100px 0 0 300px;
+    /* margin: 100px 0 0 300px; */
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: 96px 0 0 328px;
     padding-right: 40px;
     padding-bottom: 40px;
+    overflow-y: scroll;
+}
+
+.break {
+    margin-top: 60px;
 }
 
 p {
