--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -4,13 +4,13 @@
     </div>
 
     <div id="sidebar-menu" class="sidebar-menu">
-        <a onclick="markMenuItem(0)" id="menu-link0" class="menu-item" href="/summary.html">
+        <a id="menu-link0" class="menu-item" href="/summary.html">
             <p>
                 <img id="menu-img0" src="assets/image/sidebar/menu-0.svg" alt="Summary Logo"/>
             </p>
             <span>Summary</span>
         </a>
-        <a onclick="markMenuItem(1)" id="menu-link1" class="menu-item" href="/add_task.html">
+        <a id="menu-link1" class="menu-item" href="/add_task.html">
             <p>
                 <img id="menu-img1" src="assets/image/sidebar/menu-1.svg" alt="Board Logo"/>
             </p>
@@ -32,10 +32,25 @@
 </div>
 
 <div class="sidebar-bottom">
+    <a id="menu-link4" class="menu-item" href="privacy-policy.html"> <!--target="_blank"-->
+        <img id="legal-notice4" src="assets/image/sidebar/legal-notice.svg" alt="Info Icon">
+        <span>Privacy Policy</span>
+    </a>
+    <a id="menu-link5" class="menu-item" href="/legal-notice.html"> <!--target="_blank"-->
+        <img id="legal-notice5" src="assets/image/sidebar/legal-notice.svg" alt="Info Icon">
+        <span>Legal notice</span>
+    </a>
+</div>
+
+
+
+
+
+<!-- <div class="sidebar-bottom">
     <a id="menu-link4" href="/privacy-policy.html">
         <span>Privacy Policy</span>
     </a>
     <a id="menu-link5" href="/legal-notice.html">
         <span>Legal notice</span>
     </a>
-</div>
+</div> -->
