--- a/css/header.css
+++ b/css/header.css
@@ -2,7 +2,6 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* max-width: 1440px; */
     padding-left: 348px;
     position: fixed;
     top: 0;
@@ -10,7 +9,8 @@ header {
     right: 0;
     height: 96px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.1);
-    z-index: 2
+    z-index: 2;
+    background-color: #FFFFFF;
 }
 
 .header-left {
