--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -53,25 +53,36 @@
 }
 
 .sidebar-bottom {
-    margin-bottom: 120px;
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    width: 100%;
+    justify-content: center;
+    gap: 8px;
+    margin-bottom: 120px;
+    width: 232px;
 }
 
 .sidebar-bottom a {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    height: 35px;
     text-decoration: none;
     color: #A8A8A8;
-    height: 35px;
     cursor: pointer;
 }
 
-.sidebar-bottom a:hover {
-    color: #29aae0;
+.sidebar-bottom img {
+    margin-right: 10px;
+    width: 20px;
+    height: 20px;
+}
+
+.sidebar-bottom span {
+    font-size: 16px;
+    font-weight: 400;
+    font-family: 'Inter', sans-serif;
+    width: 110px;
 }
 
 .menu-item:hover {
