--- a/assets/templates/sidebar.html
+++ b/assets/templates/sidebar.html
@@ -4,25 +4,25 @@
     </div>
 
     <div id="sidebar-menu" class="sidebar-menu">
-        <a id="menu-link0" class="menu-item" href="/summary.html">
+        <a id="menu-link0" class="menu-item" onclick="openSummary()">
             <p>
                 <img id="menu-img0" src="assets/image/sidebar/menu-0.svg" alt="Summary Logo"/>
             </p>
             <span>Summary</span>
         </a>
-        <a id="menu-link1" class="menu-item" href="/add_task.html">
+        <a id="menu-link1" class="menu-item" onclick="openAddTask()">
             <p>
                 <img id="menu-img1" src="assets/image/sidebar/menu-1.svg" alt="Board Logo"/>
             </p>
             <span>Add Task</span>
         </a>
-        <a id="menu-link2" class="menu-item" href="/board.html">
+        <a id="menu-link2" class="menu-item" onclick="openBoard()">
             <p>
                 <img id="menu-img2" src="assets/image/sidebar/menu-2.svg" alt="Add Task Logo"/>
             </p>
             <span>Board</span>
         </a>
-        <a id="menu-link3" class="menu-item" href="/contact.html">
+        <a id="menu-link3" class="menu-item" onclick="openContacts()">
             <p>
                 <img id="menu-img3" src="assets/image/sidebar/menu-3.svg" alt="Contact Logo"/>
             </p>
