updated help link at header

--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -4,7 +4,7 @@
     </div>
 
     <div class="header-right">
-        <a href="/help.html">
+        <a onclick="openHelp()">
             <img class="help" src="assets/image/sidebar/help.svg" alt="Help Icon">
         </a>
         <div id="myAccount" onclick="ShowMenu()">
