--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -15,6 +15,6 @@
     <div class="header-subMenu">
         <a href="/legal-notice.html">Legal Notice</a>
         <a href="/privacy-policy.html">Privacy Policy</a>
-        <a href="#">Log out</a>
+        <a href="index.html">Log out</a>
     </div>
 </div>
