--- a/assets/templates/add_contact.html
+++ b/assets/templates/add_contact.html
@@ -1,106 +1,6 @@
-<style>
-    .add-contact-overlay {
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        height: 100vh;
-        width: 100%;
-        background-color: black;
-        z-index: 900;
-        opacity: 0.2;
-        overflow: unset;
-    }
-
-    .add-contact-container {
-        position: absolute;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        left: 0;
-        top: 0;
-        height: 100vh;
-        width: 100%;
-        z-index: 999;
-
-    }
-
-    .add-contact-card {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /*width: 1212px;*/
-        max-width: 90%;
-        height: 594px;
-        /*padding: 66px 48px 66px 48px;*/
-        gap: 32px;
-        background-color: white;
-        z-index: 1000;
-        border-radius: 30px;
-        overflow: hidden;
-        position: relative;
-
-    }
-
-    .add-contact-card-header {
-        background-color: #2A3647;
-        height: 100%;
-        width: 100%;
-        color: white;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        padding: 66px 0px 66px 48px;
-    }
-
-    .add-contact-card-icon {
-        object-fit: cover;
-        overflow: hidden;
-        width: 55.6px;
-        height: 66.48px
-    }
-
-    .add-contact-card-form {
-        display: flex;
-        flex-direction: column;
-        padding: 66px 48px 66px 0px;
-        gap: 32px;
-    }
-
-    .add-contact-card-form div {
-        position: relative;
-    }
-
-    .add-contact-card-form input {
-        width: 422px;
-        height: 50px;
-        border-radius: 10px;
-        border: solid 1px #D1D1D1;
-        padding-left: 5%;
-        font-size: 20px;
-    }
-
-    .add-contact-card-form img {
-        position: relative;
-        float: right;
-        margin-top: -40px;
-    }
-
-    .add-contact-contact-form-options {
-        display: flex;
-        gap: 24px;
-    }
-
-    #closeAddContactCardIcon {
-        position: absolute;
-        right: 40px;
-        top: 40px;
-    }
-</style>
 
 <script src="./js/contacts.js"></script>
+<link rel="stylesheet" href="css/contact.css">
 <div class="add-contact-overlay">
 
 </div>
